style: new linkStyle1 color & fix the gaps between anchor tags

--- a/src/Components/Footer/FooterText.module.scss
+++ b/src/Components/Footer/FooterText.module.scss
@@ -26,7 +26,6 @@
 
 .text p>a {
   color: var(--white);
-  padding: 4px;
   transition: opacity .2s, color .2s;
   opacity: .7;
 
@@ -35,7 +34,7 @@
   }
 
   &:focus {
-    color: var(--light-green);
+    color: var(--golden);
     outline: none;
     opacity: 1;
   }
